--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -77,10 +77,13 @@ ul li:last-child {
 ul li::marker {
   content: "";
 }
+ul li::before {
+  content: "";
+}
 
 @media screen and (max-width: 1280px) {
   body {
-    padding: 9.997px;
+    padding: 0.781vw;
   }
   h1 {
     font-size: 7.5vw;
@@ -123,7 +126,7 @@ ul li::marker {
     line-height: 2.5vw;
     padding: 0.351vw 2.579vw;
     background: none;
-    border-radius: 2.604vw;
+    border-radius: 3.906vw;
     border: 0.234vw solid #000000;
   }
   .ls-c .ls {
@@ -214,9 +217,9 @@ ul li::marker {
     content: "";
   }
 }
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 480px) {
   body {
-    padding: 9.998px;
+    padding: 2.415vw;
   }
   h1 {
     font-size: 8.696vw;
@@ -255,8 +258,8 @@ ul li::marker {
     margin-bottom: 2.415vw;
   }
   .btntl {
-    font-size: 4.831vw;
-    line-height: 6.522vw;
+    font-size: 3.864vw;
+    line-height: 5.314vw;
     padding: 1.208vw 7.246vw;
     background: none;
     border-radius: 12.077vw;
@@ -399,7 +402,7 @@ ul li::marker {
     display: none;
   }
   .nvgtn-m {
-    --mpadding-l: 0.781vw;
+    --mpadding-l: 0.703vw;
     --transition: $black ease .3s, top ease .3s .3s, transform ease .3s;
     --mborderw-l: 0.078vw;
     --mborders-l: solid;
@@ -418,6 +421,7 @@ ul li::marker {
     display: flex;
     align-items: center;
     margin-left: 4.297vw;
+    grid-area: logo;
   }
   .nvgtn-m .logo-c .logo {
     width: 6.797vw;
@@ -430,7 +434,7 @@ ul li::marker {
     border-color: var(--mborderc-l);
     border-radius: 4.883vw;
     padding: var(--mpadding-l);
-    width: 81.25vw;
+    width: 80.25vw;
     height: 6.25vw;
     justify-content: space-between;
   }
@@ -495,18 +499,18 @@ ul li::marker {
   }
   .nvgtn-m .nvc {
     display: flex;
+    grid-area: nvc;
     border-width: var(--mborderw-l);
     border-style: var(--mborders-l);
     border-color: var(--mborderc-l);
     border-radius: 4.883vw;
     padding: var(--mpadding-l);
     align-items: center;
-    justify-content: space-between;
     margin: 0;
     margin-top: 0.781vw;
   }
   .nvgtn-m .nvc .nvc-item {
-    width: 30.729vw;
+    width: 30.573vw;
     height: 4.688vw;
     border-width: var(--mborderw-l);
     border-style: var(--mborders-l);
@@ -515,7 +519,7 @@ ul li::marker {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 1.484vw;
+    margin-right: 20px;
   }
   .nvgtn-m .nvc .nvc-item:last-child {
     margin-right: 0;
@@ -655,7 +659,7 @@ ul li::marker {
     border-color: var(--mborderc-m);
     border-radius: 4.883vw;
     padding: var(--mpadding-m);
-    width: 82.422vw;
+    width: 79.422vw;
     height: 7.813vw;
     justify-content: space-between;
   }
@@ -690,7 +694,9 @@ ul li::marker {
     align-items: center;
     width: 26.855vw;
     height: 5.859vw;
-    border: var(--mborderw-l) var(--mborders-l) var(--mborderc-l);
+    border-width: var(--mborderw-m);
+    border-style: var(--mborders-m);
+    border-color: var(--mborderc-m);
     border-radius: 4.883vw;
     background-color: #000000;
     padding: var(--mpadding-m);
@@ -718,7 +724,7 @@ ul li::marker {
     border-width: var(--mborderw-m);
     border-style: var(--mborders-m);
     border-color: var(--mborderc-m);
-    border-radius: 3.906vw;
+    border-radius: 4.883vw;
     padding: var(--mpadding-m);
     align-items: center;
     justify-content: space-between;
@@ -731,7 +737,7 @@ ul li::marker {
     border-width: var(--mborderw-m);
     border-style: var(--mborders-m);
     border-color: var(--mborderc-m);
-    border-radius: 3.906vw;
+    border-radius: 4.883vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -760,7 +766,7 @@ ul li::marker {
     height: 5.86vw;
     background-color: #000000;
     padding-left: 3.32vw;
-    margin-top: 0px;
+    margin-top: 0vw;
   }
   .nvgtn-m input#menu {
     display: none;
@@ -827,7 +833,7 @@ ul li::marker {
     transition: top ease 0.3s, transform ease 0.3s 0.3s;
   }
 }
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 480px) {
   .nvgtn {
     display: none;
   }
@@ -841,7 +847,7 @@ ul li::marker {
     border-style: var(--mborders-s);
     border-color: var(--mborderc-s);
     padding: var(--mpadding-s);
-    border-radius: 25px;
+    border-radius: 6.038vw;
     font-weight: 400;
     font-size: 4.831vw;
     line-height: 6.522vw;
@@ -1073,7 +1079,7 @@ ul li::marker {
   height: 13.021vw;
 }
 .abt .abt-b {
-  width: 48.698vw;
+  max-width: 48.698vw;
   height: 26.562vw;
   min-height: 26.562vw;
   border-radius: 2.604vw;
@@ -1092,9 +1098,10 @@ ul li::marker {
   padding: 3.125vw 2.708vw;
   grid-area: skills;
 }
-.abt .abt-c button {
-  margin-right: 0.781vw;
-  margin-bottom: 0.781vw;
+.abt .abt-c .sk-c {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: stretch;
 }
 
 @media screen and (max-width: 1280px) {
@@ -1135,31 +1142,25 @@ ul li::marker {
     height: 15.625vw;
   }
   .abt .abt-b {
-    width: 48.047vw;
     height: 39.844vw;
-    min-width: 48.047vw;
+    max-width: 48.047vw;
     min-height: 39.844vw;
     border-radius: 3.906vw;
     background-color: #000000;
     color: #fff;
     padding: 4.141vw 3.516vw 4.141vw 3.594vw;
-    margin-right: 2.344vw;
+    margin-right: 1.563vw;
     grid-area: aboutme;
   }
   .abt .abt-c {
-    width: 48.047vw;
     height: 39.844vw;
-    min-width: 48.047vw;
+    max-width: 48.047vw;
     min-height: 39.844vw;
     border-radius: 3.906vw;
     background-color: #C3DA37;
     padding: 4.141vw 3.516vw 4.141vw 3.594vw;
     grid-area: skills;
     margin-top: 0;
-  }
-  .abt .abt-c button {
-    margin-right: 9.997px;
-    margin-bottom: 9.997px;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -1200,9 +1201,8 @@ ul li::marker {
     height: 17.09vw;
   }
   .abt .abt-b {
-    width: 48.047vw;
+    max-width: 48.047vw;
     height: 65vw;
-    min-width: 48.047vw;
     min-height: 65vw;
     border-radius: 4.883vw;
     background-color: #000000;
@@ -1212,19 +1212,14 @@ ul li::marker {
     grid-area: aboutme;
   }
   .abt .abt-c {
-    width: 48.047vw;
     height: 65vw;
-    min-width: 48.047vw;
+    max-width: 48.047vw;
     min-height: 65vw;
     border-radius: 4.883vw;
     background-color: #C3DA37;
     padding: 4.395vw 4.785vw;
     grid-area: skills;
     margin-top: 0;
-  }
-  .abt .abt-c button {
-    margin-right: 0.977vw;
-    margin-bottom: 0.977vw;
   }
 }
 @media screen and (max-width: 480px) {
@@ -1238,7 +1233,7 @@ ul li::marker {
   }
   .abt .abt-a {
     background-color: #839292;
-    border-radius: 25px;
+    border-radius: 6.038vw;
     margin-top: 6.036px;
     color: #fff;
     display: flex;
@@ -1267,11 +1262,10 @@ ul li::marker {
     height: 31.401vw;
   }
   .abt .abt-b {
-    width: unset;
-    min-width: unset;
+    max-width: unset;
     height: unset;
     min-height: unset;
-    border-radius: 25px;
+    border-radius: 6.038vw;
     background-color: #000000;
     color: #fff;
     padding: 7.729vw 6.763vw;
@@ -1279,11 +1273,10 @@ ul li::marker {
     grid-area: aboutme;
   }
   .abt .abt-c {
-    width: 100%;
-    min-width: 100%;
+    max-width: unset;
     height: unset;
     min-height: unset;
-    border-radius: 25px;
+    border-radius: 6.038vw;
     background-color: #C3DA37;
     padding: 7.729vw 6.763vw;
     grid-area: skills;
@@ -1406,11 +1399,11 @@ ul li::marker {
     grid-template-areas: "gtn efs" "gtn ecm" "ptf ptf";
   }
   .pjts .pjts-c {
-    width: 48.047vw;
+    max-width: 48.047vw;
     border-radius: 4.883vw;
     padding: 5.371vw 4.883vw;
   }
-  .pjts h1 {
+  .pjts h3 {
     margin-top: 1.953vw;
     margin-bottom: 1.465vw;
   }
@@ -1430,7 +1423,7 @@ ul li::marker {
   }
   .pjts .ptf {
     background-color: #DADCF1;
-    width: 98.047vw;
+    max-width: 98.047vw;
     min-height: 37.305vw;
   }
   .pjts .ptf button {
@@ -1448,8 +1441,8 @@ ul li::marker {
     grid-template-areas: "gtn" "efs" "ecm" "ptf";
   }
   .pjts .pjts-c {
-    width: unset;
-    border-radius: 25px;
+    max-width: unset;
+    border-radius: 6.038vw;
     padding: 9.662vw 6.763vw;
   }
   .pjts button {
@@ -1461,7 +1454,7 @@ ul li::marker {
     border-radius: 12.077vw;
     color: #fff;
   }
-  .pjts h1 {
+  .pjts h3 {
     margin-top: 4.831vw;
     margin-bottom: 3.623vw;
   }
@@ -1481,7 +1474,7 @@ ul li::marker {
   }
   .pjts .ptf {
     background-color: #DADCF1;
-    width: unset;
+    max-width: unset;
     min-height: unset;
   }
   .pjts .ptf button {
@@ -1576,13 +1569,17 @@ ul li::marker {
     margin-right: 2.344vw;
     margin-bottom: 2.344vw;
   }
+  .tl .tl-i:nth-child(2) {
+    margin-right: 0;
+  }
   .tl .tl-i:last-child {
     margin-right: 0;
     margin-bottom: 0;
   }
   .tl .tl-c {
     border-radius: 3.906vw;
-    width: 48.047vw;
+    max-width: 48.047vw;
+    width: unset;
     height: 63.164vw;
     padding: 3.906vw 3.321vw;
     color: #fff;
@@ -1611,7 +1608,8 @@ ul li::marker {
     color: #000000;
   }
   .tl .griet {
-    width: 98.438vw;
+    max-width: 98.438vw;
+    width: unset;
     height: 34.57vw;
   }
 }
@@ -1631,17 +1629,10 @@ ul li::marker {
   }
   .tl .tl-c {
     border-radius: 4.883vw;
-    width: 48.047vw;
+    max-width: 48.047vw;
+    width: unset;
     height: 83.936vw;
     padding: 3.906vw 3.369vw;
-  }
-  .tl .tl-c button {
-    font-size: 1.953vw;
-    line-height: 1.953vw;
-    background: none;
-    border: 0.292vw solid #fff;
-    padding: 0.684vw 1.953vw;
-    border-radius: 4.883vw;
   }
   .tl .tl-c h3 {
     margin: 1.954vw 0 0;
@@ -1669,7 +1660,8 @@ ul li::marker {
     color: #000000;
   }
   .tl .griet {
-    width: 98.047vw;
+    max-width: 98.047vw;
+    width: unset;
     height: 43.994vw;
   }
 }
@@ -1688,18 +1680,11 @@ ul li::marker {
     margin-bottom: 0;
   }
   .tl .tl-c {
-    border-radius: 25px;
-    width: 95.169vw;
+    border-radius: 6.038vw;
+    max-width: unset;
+    width: unset;
     height: unset;
     padding: 9.662vw 6.763vw;
-  }
-  .tl .tl-c button {
-    font-size: 3.865vw;
-    line-height: 5.314vw;
-    background: none;
-    border: 0.723vw solid #fff;
-    padding: 1.812vw 4.831vw;
-    border-radius: 12.077vw;
   }
   .tl .tl-c h3 {
     margin: 2.657vw 0 0vw;
@@ -1743,7 +1728,8 @@ ul li::marker {
     height: 160.749vw;
   }
   .tl .griet {
-    width: 95.169vw;
+    width: unset;
+    max-width: unset;
     height: 118.478vw;
   }
 }
@@ -1784,7 +1770,7 @@ ul li::marker {
 .ipt .ov {
   padding: 3.125vw 3.385vw;
   border-radius: 2.604vw;
-  max-width: 64.931vw;
+  min-width: 64.931vw;
   height: 26.563vw;
   grid-area: ov;
   margin-right: 1.563vw;
@@ -1835,7 +1821,7 @@ ul li::marker {
   .ipt .ov {
     padding: 3.828vw 3.555vw;
     border-radius: 3.906vw;
-    max-width: 48.047vw;
+    min-width: 48.047vw;
     height: 39.844vw;
     grid-area: ov;
     margin-right: 2.344vw;
@@ -1887,7 +1873,7 @@ ul li::marker {
   .ipt .ov {
     padding: 5.371vw 4.785vw;
     border-radius: 4.883vw;
-    width: 48.047vw;
+    min-width: 48.047vw;
     height: 65.977vw;
     grid-area: ov;
     margin-right: 2.93vw;
@@ -1895,7 +1881,7 @@ ul li::marker {
   .ipt .tg {
     padding: 4.785vw 5.371vw;
     border-radius: 4.883vw;
-    width: 48.047vw;
+    max-width: 48.047vw;
     height: 65.977vw;
     grid-area: tg;
   }
@@ -1943,8 +1929,8 @@ ul li::marker {
   }
   .ipt .ov {
     padding: 40.001px 27.999px;
-    border-radius: 25px;
-    width: unset;
+    border-radius: 6.038vw;
+    min-width: unset;
     height: unset;
     grid-area: ov;
     margin-right: 0px;
@@ -1952,8 +1938,8 @@ ul li::marker {
   }
   .ipt .tg {
     padding: 40.001px 27.999px;
-    border-radius: 25px;
-    width: unset;
+    border-radius: 6.038vw;
+    max-width: unset;
     height: unset;
     grid-area: tg;
   }
