--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -72,6 +72,7 @@
             }
         }
         .resume-c{
+            text-decoration: none;
             margin-left: 12.604vw;
             display: flex;
             align-items: center;
